# wiki-mcp

./: .gitignore  CLAUDE.md  README.md  confluence_tools.py  main.py  mcp.json.example  pyproject.toml  wiki_mcp_prompts.py  wiki_tools.py
scripts/: release.sh
